--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -18,14 +18,38 @@
 {% if projs %}
 <div class="container">
 	<h1>Projs</h1>
-		{% for p in projs %}
-	    <a href="{% url 'proj' p.id %}">
-	        <figure>
-	            <img class="proj_image" src="{{p.image}}"/>
-	            <figcaption>{{p.titre|short}}</figcaption>
-	        </figure>
-	    </a>
+
+		<div class="liste_videos">
+			{% for p in projs %}
+
+				<div class="bloc_video">
+
+			    <a href="{% url 'proj' p.id %}">
+			        <figure>
+			            <img class="proj_image" src="{{p.image}}"/>
+									<figcaption class="legende_vid_duree">
+											1:03:25
+									</figcaption>
+			        </figure>
+			    </a>
+
+					<a href="{% url 'proj' p.id %}">
+							<div class="legende_vid_titre">
+									{{p.titre|short}}
+							</div>
+					</a>
+
+					<div class="legende_vid_auteur">
+								<a href="#">
+									JTX2015
+								</a>
+								-
+								56
+								 vues.
+					</div>
+				</div>
 		{% endfor %}
+		</div>
 	</div>
 {% endif %}
 
@@ -33,11 +57,11 @@
 <div class="container">
 	<h1>Vidéos</h1>
 	<div class="liste_videos">
+
 		{% for v in videos %}
 		<div class="bloc_video">
-
 			<a href="{% url 'video' v.id %}">
-			<figure style="display:table-cell">
+			<figure>
 					<img class="img_vid" src="{{v.url}}.png"/>
 					<figcaption class="legende_vid_duree">
 							{{v|duration}}
