--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -91,8 +91,7 @@
     {% endblock %}
 
     {% if pages and page and adress %}
-        <br/>
-        <br/>
+  <div class="choisir_page">
         Page :
         {% for p in pages %}
             {% if p != page %}
@@ -102,9 +101,11 @@
                     <a href="{% url adress p %}">{{p}}</a>
                 {% endif %}
             {% else %}
-                {{p}}
+                <b style="color:black">{{p}}</b>
             {% endif %}
         {% endfor %}
+
+    </div>
     {% endif %}
 
 	</div>
