--- a/videos/templates/videos.html
+++ b/videos/templates/videos.html
@@ -4,29 +4,40 @@
 {% if elements %}
 
 {% load app_filters %}
+<div class="container">
+	<h1>Toutes les vidéos</h1>
+
 <div class="liste_videos">
 	{% for v in elements %}
 
-				<a href="{% url 'video' v.id %}">
-        <figure style="display:table-cell">
+	<div class="bloc_video">
+		<a href="{% url 'video' v.id %}">
+		<figure>
+				<img class="img_vid" src="{{v.url}}.png"/>
+				<figcaption class="legende_vid_duree">
+						{{v|duration}}
+				</figcaption>
+		</figure>
+		</a>
 
-            <img class="img_vid" src="{{v.url}}.png"/>
+		<a href="{% url 'video' v.id %}">
+				<div class="legende_vid_titre">
+						{{v.titre|short}}
+				</div>
+		</a>
 
-						<figcaption class="legende_vid_duree">
-                {{v|duration}}
-            </figcaption>
-
-						<figcaption class="legende_vid_titre">
-								{{v.titre|short}}
-						</figcaption>
-
-						<figcaption class="legende_vid_auteur">
-								{{v|auteurs}}
-						</figcaption>
-        </figure>
-				</a>
+		<div class="legende_vid_auteur">
+					<a href="#">
+						{{v|auteurs}}
+					</a>
+					-
+					{{v.views}}
+					 vues.
+		</div>
+	</div>
 
 	{% endfor %}
+	</div>
 	</div>
 {% endif %}
 {% endblock %}
