--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -15,7 +15,6 @@
 #body {
     display: table;
     margin: 0 auto;
-    width: 900px;
     margin-top:71px;
 
 }
@@ -124,7 +123,33 @@ Style de la Lateral Bar
 
 }
 
+input[type=checkbox]:checked ~ #lateral_bar {
+   display: unset;
+}
+
+.menu_button{
+background-color: white;
+position: fixed;
+margin-top: 5px;
+margin-left: 7px;
+visibility: visible;
+z-index: 1;
+padding: 7px;
+padding-bottom: 3px;
+opacity: 0.6;
+}
+
+.menu_button:hover{
+  opacity: 1;
+}
+
+.menu_button_img{
+  width: 25px;
+}
+
+
 #lateral_bar{
+  display: none;
   font-size: 12px;
     border-style: solid;
     border-width: 1px;
@@ -135,7 +160,7 @@ Style de la Lateral Bar
     bottom: 0;
     left:0;
     width:250px;
-    margin-left: -200px;
+
     background-color: #ffffff;
     margin-top:-22px;
     text-align:center;
@@ -145,10 +170,7 @@ Style de la Lateral Bar
     transition-timing-function: ease-out;
 }
 
-#lateral_bar:hover{
-  margin-left: 0px;
 
-}
 
 #lateral_bar h1 {
 
@@ -726,6 +748,7 @@ padding-top: 5px;
 }
 
 .suggestion{
+  width:220px;
   padding-left: 30px;
   vertical-align:top;
   display:table-cell;
