--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -27,6 +27,7 @@
               <li><a href="{% url 'favorites' 1 %}">Favoris</a></li>
           {% endif %}
           <li><a href="{% url 'tags' %}">Tags</a></li>
+          <li><a href="{% url 'jtx' 2015 %}">JTX 2015</a></li>
       </ul>
     </div>
   </div>
