--- a/videos/templates/jtx.html
+++ b/videos/templates/jtx.html
@@ -3,6 +3,7 @@
 {% load app_filters %}
 
 <div class="jtx_titre">JTX2015</div>
+<div class="jtx_sous_titre">On intuite et on disrupte.</div>
 
 <div class="container">
 	<h1>Projs</h1>
@@ -48,7 +49,14 @@
 </a>
 
 </div>
+</div>
+
+
+<div class="container">
+	<h1>Vidéos les plus vues</h1>
 
 </div>
+
+
 
 {% endblock %}
